Fixed sidenote so that it looked good on mobile and desktop

--- a/assets/styles/_theme.scss
+++ b/assets/styles/_theme.scss
@@ -389,6 +389,11 @@ a, button {
             }
 
         }
+        #sidenote {
+           @include media('>desktop') {
+                margin-left: 32%;
+           }
+        }
     }
 }
 #skills {
